@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-31T16:25:04Z",
-  "count_outdated" : 612,
-  "uniques_outdated" : 349,
-  "count" : 651,
-  "uniques" : 368,
+  "timestamp" : "2022-11-01T01:52:59Z",
+  "count_outdated" : 622,
+  "uniques_outdated" : 357,
+  "count" : 661,
+  "uniques" : 375,
   "clones" : [
-    {
-      "timestamp": "2022-10-17T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 10 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 8 ]
-    },
     {
       "timestamp": "2022-10-18T00:00:00Z",
       "count": 3,
@@ -105,8 +98,8 @@
     },
     {
       "timestamp": "2022-10-31T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
