@@ -3,11 +3,6 @@
   "uniques": 5,
   "clones": [
     {
-      "timestamp": "2022-10-17T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-10-18T00:00:00Z",
       "count": 3,
       "uniques": 2
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2022-10-31T00:00:00Z",
-      "count": 2,
+      "count": 3,
       "uniques": 1
     }
   ]
