@@ -1,3 +1,11 @@
+2022-11-01T01:52:59Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3366162838 # 987
+* notice: last 14d: unq all: 5 39
+* notice: prev accum: outdated-unq outdated-all / unq all: 349 612 / 368 651
+* notice: next accum: outdated-unq outdated-all / unq all: 357 622 / 375 661
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +3 -0 -0 / 1 3
+* notice: removed / changed dates: [2022-10-17] / [2022-10-31]
+
 2022-10-31T16:25:04Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3362952577 # 986
 * notice: last 14d: unq all: 5 39
